Fix usage of Class.newInstance()
MOE_MIGRATED_REVID=123668793